--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         <div class="container mx-auto flex justify-between items-center">
             <a href="/" class="text-white text-xl font-bold hover:text-blue-200">School Registration</a>
             <div class="space-x-6">
-                <a href="/login" class="text-white hover:text-blue-300"><i class="fas fa-sign-in-alt"></i> Login</a>
+                <a href="{{url_for('login')}}" class="text-white hover:text-blue-300"><i class="fas fa-sign-in-alt"></i> Login</a>
                 <a href="/register" class="text-white hover:text-blue-300"><i class="fas fa-user-plus"></i> Register</a>
             </div>
         </div>
